<resources>
    <string name="app_name">ReadBook</string>

    <string name="nav_browse">Browse</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_settings">Settings</string>
    <string name="image">image</string>
    <string name="read_info">Read</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="automatic">Auto</string>
    <string name="theme_mode_sub_text">change the look and feel as per your preferences</string>
    <string name="select_default_theme">Select default theme</string>
    <string name="ui">UI</string>
    <string name="start_typing">Start typing…</string>
    <string name="set_the_font_size">Font Size</string>
    <string name="set_the_theme">Page Theme</string>
    <string name="aa">Aa</string>
    <string name="customize_info">Customize</string>
    <string name="search">Search</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="sort">Sort</string>
    <string name="sources">Sources</string>
    <string name="no_results_err">we didn\'t find anything for you!</string>
    <string name="retry">Retry</string>
    <string name="currently_active">Currently active</string>
    <string name="info">INFO</string>
    <string name="mp_lite_subtitle">an open source music player from same dev</string>
    <string name="add_to_library_btn">Add to library</string>
    <string name="nav_library">Library</string>
    <string name="retry_button_label">Retry</string>

    <string name="title_disconnected">Không có kết nối Internet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tv_Input_Email">Nhập Email</string>
    <string name="tv_Input_Pass">Nhập Mật Khẩu</string>
    <string name="tv_Login">Đăng Nhập</string>
    <string name="tv_Register">Tạo tài khoản mới</string>
    <string name="tv_ForgotPass">Bạn quên mật khẩu ư?</string>
    <string name="tv_Pass">Mật Khẩu</string>
    <string name="tv_User">Tên Tài Khoản</string>
    <string name="tv_RPass">Xác Nhận Mật Khẩu</string>
    <string name="tv_Sent">Gửi</string>
    <string name="tv_File">Hồ Sơ</string>
    <string name="tv_EditProfile">Sửa Thông Tin</string>

    <string name="cb_pass">Hiện mật khẩu</string>
    <string name="tv_Opass">Nhập mật khẩu cũ</string>
    <string name="tv_Npass">Nhập mật khẩu mới</string>
    <string name="tv_RNpass">Xác nhận mật khẩu mới </string>
    <string name="tv_ChangePass">Đổi mật khẩu</string>

    <string name="tv_UpdateUser">Cập Nhật Thông Tin Người Dùng</string>
    <string name="tv_usename">Username</string>
    <string name="tv_permission">Quyền</string>
    <string name="tv_verification">Xác minh</string>
    <string name="tv_status">Trạng thái</string>
    <string name="tv_image">Ảnh</string>

    <string-array name="gender_array">
        <item>Nam</item>
        <item>Nữ</item>
        <item>Khác</item>
    </string-array>

    <string name="tv_gender">Giới tính</string>
    <string name="tv_describe">Mô tả</string>
    <string name="tv_email">Email</string>
</resources>